# channel

./: .gitignore  .guix-authorizations  .guix-channel  AUTHORS  ChangeLog  HACKING  Makefile.am  NEWS  NOTES.org  README.org  asahi-guix.info  configure.ac  guix.scm  hall.scm  manifest.scm  pre-inst-env.in  r0man.key
.github/workflows/: aarch64-linux-gnu.yml  m1n1.yaml  test.yml  x86_64-linux-gnu.yml
.guix/: manifest.scm
asahi/: channels.scm  firmware.cpio  guix.scm  installer.scm  kernel.config  kernel.edge.config  packages.scm
asahi/guix/: channels.scm  initrd.scm  installer.scm  kernel.config  kernel.edge.config  linux.scm  packages.scm  services.scm  transformations.scm  udev.scm
asahi/guix/bootloader/: m1n1.scm
asahi/guix/install/: base.scm  edge.scm
asahi/guix/services/: channels.scm  console-font.scm  firmware.scm  udev.scm
asahi/guix/system/: base.scm  desktop.scm  edge.scm
build-aux/: test-driver.scm
doc/: ashai-guix.texi
etc/: news.txt
examples/: asahi-guix-edge.tmpl  asahi-guix.tmpl
modules/asahi/guix/: channels.scm  ci.scm  config.scm  initrd.scm  manifests.scm  packages.scm  search-paths.scm  substitutes.scm  transformations.scm
modules/asahi/guix/bootloader/: m1n1.scm
modules/asahi/guix/build-system/: installer.scm
modules/asahi/guix/files/authorized-keys/: substitutes.asahi-guix.org.pub
modules/asahi/guix/home/: config.scm
modules/asahi/guix/home/services/: sound.scm
modules/asahi/guix/images/: base.scm  edge.scm  gnome.scm  installer.scm  plasma.scm  sway.scm
modules/asahi/guix/installer/: data.scm  os.scm  package.scm  partition.scm  script.scm
modules/asahi/guix/services/: firmware.scm  sound.scm  speakersafetyd.scm  stats.scm
modules/asahi/guix/systems/: base.scm  desktop.scm  edge.scm  gnome.scm  image.scm  install.scm  plasma.scm  sway.scm
modules/gnu/bootloader/: m1n1.scm
modules/gnu/system/images/: asahi.scm
modules/gnu/system/images/asahi/: installer.scm
scripts/: deploy  make-asahi-installer-package.in  nrepl-server
scripts/hetzner/: install-guix  install-live-system  install-server
share/systems/: asahi-guix-desktop-gnome.tmpl  asahi-guix-desktop-plasma.tmpl  asahi-guix-desktop-sway.tmpl  asahi-guix-desktop.tmpl  asahi-guix-edge.tmpl  asahi-guix-gnome-desktop.tmpl  asahi-guix.tmpl  base.tmpl  edge.tmpl  gnome.tmpl  plasma.tmpl  sway.tmpl
src/asahi/guix/: channels.scm  initrd.scm  substitutes.asahi-guix.org.pub  substitutes.scm  transformations.scm  udev.scm
src/asahi/guix/bootloader/: m1n1.scm
src/asahi/guix/cuirass/: jobs.scm
src/asahi/guix/files/authorized-keys/: apple-m1.pub
src/asahi/guix/files/ssh/authorized-keys/: root.pub
src/asahi/guix/files/ssh/authorized-keys/ed25519/: roman.pub
src/asahi/guix/files/ssh/authorized-keys/rsa/: roman.pub
src/asahi/guix/home/: config.scm
src/asahi/guix/home/services/: sound.scm
src/asahi/guix/machine/: server.scm
src/asahi/guix/machines/: server.scm
src/asahi/guix/patches/: cuirass-disable-jit.patch
src/asahi/guix/services/: sound.scm  speakersafetyd.scm
src/asahi/guix/system/: base.scm  desktop.scm  install.scm  server.scm
src/asahi/guix/systems/: base.scm  desktop.scm  image.scm  install.scm  server.scm
tests/asahi/guix/installer/: data.scm  script.scm
